<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.beemediate</groupId>
	<artifactId>beemediate</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>beemediate</name>
	<description>Integration platform from ODOO-XMLRPC to XMLOpentrans</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<sonar.organization>giorgio-hash</sonar.organization>
	</properties>
	<dependencies>
	
		<!--JaCoCo-->
		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.13</version>
        </dependency>
        
        <!--JUnit5-->
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
          <!-- JUnit4 legacy tests -->
		  <dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <scope>test</scope>
		  </dependency>
		
		  <!-- Vintage engine: permette alla JUnit Platform di eseguire test JUnit4 -->
		  <dependency>
		    <groupId>org.junit.vintage</groupId>
		    <artifactId>junit-vintage-engine</artifactId>
		    <scope>test</scope>
		  </dependency>

		<!--HTML sanitizer della OWASP-->	
		<!-- https://mvnrepository.com/artifact/org.owasp.encoder/encoder -->
		<dependency>
		    <groupId>org.owasp.encoder</groupId>
		    <artifactId>encoder</artifactId>
		    <version>1.3.1</version>
		</dependency>
	
        <!--Apache POI-->
        <dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>5.3.0</version>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/org.apache.xmlrpc/xmlrpc-client -->
		<!-- XMLRPC -->
		<dependency>
			<groupId>org.apache.xmlrpc</groupId>
			<artifactId>xmlrpc-client</artifactId>
			<version>3.1.3</version>
		</dependency>
		
		<!--Jackson-->        
		<dependency>
		    <groupId>com.fasterxml.jackson.dataformat</groupId>
		    <artifactId>jackson-dataformat-xml</artifactId>
		</dependency>

		<!--Spring WEB-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

		<!--quickstart-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!--Selenium-->
		<dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>4.31.0</version> 
        </dependency>

		<!--WireMock-->
	    <dependency>
	        <groupId>org.wiremock</groupId>
	        <artifactId>wiremock-standalone</artifactId>
	        <version>3.3.1</version>
	        <scope>test</scope>
	    </dependency>
		
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			
			<!--PMD-->
		      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-pmd-plugin</artifactId>
		        <version>3.27.0</version>
		        <configuration>
		            <includeTests>false</includeTests>
		            <rulesets>
		                <ruleset>config/pmd/ruleset.xml</ruleset>
		            </rulesets>
		            <failOnViolation>false</failOnViolation>  <!-- non fallisce la build -->
    				<printFailingErrors>true</printFailingErrors> <!-- mostra comunque i warning -->
		            <linkXRef>false</linkXRef>
		            <targetJdk>17</targetJdk>
		        </configuration>
		        <executions>
		            <execution>
		                <id>pmd-main</id>
		                <phase>verify</phase>
		                <goals>
		                    <goal>check</goal>
		                </goals>
		            </execution>
		            <!--Ho escluso l'analisi dei casi di test-->
		            <execution>
		                <id>cpd</id>
		                <phase>verify</phase>
		                <goals>
		                    <goal>cpd-check</goal>
		                </goals>
		            </execution>
		        </executions>
		        </plugin>
		        
		        <!--SpotBugs-->
		        <plugin>
				  <groupId>com.github.spotbugs</groupId>
				  <artifactId>spotbugs-maven-plugin</artifactId>
				  <version>4.9.5.0</version>
				    <configuration>
				      <effort>Max</effort>
			          <threshold>Low</threshold>          
				          <xmlOutput>true</xmlOutput>
				          <!-- Optional directory to put spotbugs xdoc xml report -->
				          <xmlOutput>true</xmlOutput>
						  <sarifOutput>true</sarifOutput>
						  <sarifOutputDirectory>${project.basedir}</sarifOutputDirectory>
						  <sarifOutputFilename>spotbugs-report.sarif</sarifOutputFilename>
						  <htmlOutput>true</htmlOutput>
		                <plugins>
		                    <plugin>
		                        <groupId>com.h3xstream.findsecbugs</groupId>
		                        <artifactId>findsecbugs-plugin</artifactId>
		                        <version>1.12.0</version>
		                    </plugin>
		                </plugins>
		            </configuration>
		            <executions>
		            	<execution>
		            		<id>main-report</id>
		            		<phase>verify</phase>
		            		<goals>
		            			<goal>spotbugs</goal>
		            		</goals>
		            	</execution>
		            </executions>
				</plugin>
				
				<!--JaCoCo-->
				<plugin>
		            <groupId>org.jacoco</groupId>
		            <artifactId>jacoco-maven-plugin</artifactId>
		            <version>0.8.12</version>
		            <executions>
		                <execution>
		                    <goals>
		                        <goal>prepare-agent</goal>
		                    </goals>
		                </execution>
					    <!-- genera report dopo i test -->
					    <execution>
					      <id>report</id>
					      <phase>verify</phase>
					      <goals><goal>report</goal></goals>
					    </execution>
					  </executions>
		        </plugin>
			</plugins>
	</build>
	
	<reporting>
    <plugins>
    
          <!-- Project Information (dependencies, summary, scm, contributors, license, etc) -->
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-project-info-reports-plugin</artifactId>
	        <version>3.4.3</version>
	      </plugin>
    
	      <!--PMD report-->
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-pmd-plugin</artifactId>
	        <version>3.27.0</version>
	 		        <configuration>
			            <includeTests>false</includeTests>
			            <rulesets>
			                <ruleset>config/pmd/ruleset.xml</ruleset>
			            </rulesets>
			            <linkXRef>false</linkXRef>
			            <targetJdk>17</targetJdk>
			            <minimumTokens>1</minimumTokens>
			            <skipEmptyReport>false</skipEmptyReport>
			        </configuration>
	      </plugin>
	    
	      <!--spotbugs report-->
	      <plugin>
	      <groupId>com.github.spotbugs</groupId>
	      <artifactId>spotbugs-maven-plugin</artifactId>
	      <version>4.9.5.0</version>
	      <configuration>
	        <effort>Max</effort>
	        <threshold>Low</threshold>
	        <plugins>
	          <plugin>
	            <groupId>com.h3xstream.findsecbugs</groupId>
	            <artifactId>findsecbugs-plugin</artifactId>
	            <version>1.12.0</version>
	          </plugin>
	        </plugins>
	      </configuration>
	    </plugin>
	    
	    <!--Javadoc report-->
	    <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>3.12.0</version>
			<configuration>
				  <failOnError>false</failOnError>
			</configuration>
		</plugin>
		
		    <!--JaCoCo report-->
		      <plugin>
		        <groupId>org.jacoco</groupId>
		        <artifactId>jacoco-maven-plugin</artifactId>
		        <reportSets>
		          <reportSet>
		            <reports>
		              <!-- select non-aggregate reports -->
		              <report>report</report>
		            </reports>
		          </reportSet>
		        </reportSets>
		      </plugin>
    </plugins>
  </reporting>

</project>